# parallel-halftone

./: .gitignore  CMakeLists.txt  README.md  colab-runner.ipynb  cu.cu  output_cuda.pgm  problemas.txt  teste.ppm  wsnr.py
img/ppm/: baboon_monocromatica.ppm  baboon_perspectiva.ppm  butterfly.ppm  edward.ppm  lattes.ppm  monalisa.ppm  organiza_imagens.sh  seagull.ppm
img/ppm/medium/: medium_4.ppm  medium_5.ppm
img/ppm/xlarge/: xlarge_5.ppm
include/: method.hpp  ppm.hpp
legacy/: serial.c
lib/: method.cpp  ppm.cpp
opencv/: cv_diagonal.cpp  opencv.cpp  parallel.cu
report/: report.tex
report/.latex_report/: ieee.bib  report.tex
report/.latex_report/chapters/: conclusao.tex  formulacao.tex  implementacao.tex  introducao.tex  speedup.tex
src/: README.md  cuda.cu  omp.cpp  parallel.cu  ppm.hpp  serial.c  serial.cpp
